@@ -1,3 +1,7 @@
+2006-03-14  David Reveman  <davidr@novell.com>
+
+	* plugins/scale.c: Add darken background option (Daniel G. Taylor).
+
 2006-03-13  David Reveman  <davidr@novell.com>
 
 	* src/display.c (eventLoop):
